--- a/03/ex03/Makefile
+++ b/03/ex03/Makefile
@@ -14,7 +14,7 @@ OBJS			= $(SRCS:.cpp=.o)
 $(NAME)			: $(OBJS)
 					$(CC) $(CFLAGS) $(OBJS) -o $@
 
-%.o				: %.c
+%.o				: %.cpp
 					$(CC) $(CFLAGS) -c $< -o $@
 
 all				: $(NAME)
