--- a/01/ex00/Makefile
+++ b/01/ex00/Makefile
@@ -1,6 +1,6 @@
 NAME			= Zombie
 
-CC				= clang++
+CC				= c++
 CFLAGS			= -Wall -Werror -Wextra -std=c++98
 
 SRCS			= main.cpp \
@@ -13,7 +13,7 @@ OBJS			= $(SRCS:.cpp=.o)
 $(NAME)			: $(OBJS)
 					$(CC) $(CFLAGS) $(OBJS) -o $@
 
-%.o				: %.c
+%.o				: %.cpp
 					$(CC) $(CFLAGS) -c $< -o $@
 
 all				: $(NAME)
